--- a/package.json
+++ b/package.json
@@ -13,10 +13,15 @@
     "@react-google-maps/api": "^2.20.6",
     "@splinetool/react-spline": "^4.0.0",
     "@splinetool/runtime": "^1.9.73",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "lucide-react": "^0.482.0",
     "next": "^15.1.7",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "react-icons": "^5.5.0"
+    "react-icons": "^5.5.0",
+    "tailwind-merge": "^3.0.2",
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "@types/node": "^20",
