--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@googlemaps/markerclusterer": "^2.5.3",
     "@radix-ui/react-dialog": "^1.1.6",
     "@radix-ui/react-label": "^2.1.2",
+    "@radix-ui/react-select": "^2.1.7",
     "@radix-ui/react-slot": "^1.2.0",
     "@react-google-maps/api": "^2.20.6",
     "@splinetool/react-spline": "^4.0.0",
